--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    Final project from <strong>Marcos Santana</script>
+    Final project from <strong>Marcos Santana</strong>
 </body>
 
 </html>
